temporary fix to white space at bottom of about

--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,15 @@
   flex-wrap: wrap;
   color: black;
   font-family: 'Josefin Sans', sans-serif;
+  margin-bottom: 0px;
+  height: 750px;
 }
 /* HEADER */
 .header {
   width: 100%;
   height: 170px;
   border-bottom: solid black 2px;
+background-color: #bbabfc;
 }
 
 .headerText {
